[metadata]
name = d_tennis
version = 0.0.1
author = Darcy Raimond
author_email = darcy.raimond@gmail.com
description = None
long_description = file: README.md
long_description_content_type = text/markdown
url = None
project_urls =
    Bug Tracker = None
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src